tests/res/nullability/void_returns_value.say
// A void function may not return a value.
fn log(m) {
    return 5; // error: A void function cannot return a value
}
